--- a/old_tests/rf.ipynb
+++ b/old_tests/rf.ipynb
@@ -524,7 +524,77 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "metric_dict = {'dummy':{'auc':[],\n",
+    "                        'fprs':[],\n",
+    "                        'tprs':[],\n",
+    "                        'proba':[],\n",
+    "                        'label':[]},\n",
+    "                'rf':{  'auc':[],\n",
+    "                        'fprs':[],\n",
+    "                        'tprs':[],\n",
+    "                        'proba':[],\n",
+    "                        'label':[]},\n",
+    "              }\n",
+    "for f in range(folds):\n",
+    "    # TODO: redo as stratifiedkfold over subjects\n",
+    "    subjkeys = list(set(label_arr[:, 0]))\n",
+    "    # set seeds (maybe define it as utils)\n",
+    "    random.seed(f)\n",
+    "    np.random.seed(f)\n",
+    "    subjkeys = np.random.permutation(subjkeys) #random shuffling\n",
+    "    \n",
+    "    N_totalsub = len(subjkeys)\n",
+    "    N_trainsub = round(0.8*N_totalsub)\n",
+    "    N_validsub = round(0.1*N_totalsub)\n",
+    "    N_testsub = N_totalsub - N_trainsub - N_validsub\n",
+    "\n",
+    "\n",
+    "    N_train_sub = subjkeys[:N_trainsub]\n",
+    "    N_val_sub = subjkeys[N_trainsub:N_trainsub + N_validsub]\n",
+    "    N_test_sub = subjkeys[N_trainsub + N_validsub: N_trainsub + N_validsub + N_testsub]\n",
+    "    X_train = data_arr_rf[np.isin(label_arr[:, 0], N_train_sub)]\n",
+    "    X_val = data_arr_rf[np.isin(label_arr[:, 0], N_val_sub)]\n",
+    "    X_test = data_arr_rf[np.isin(label_arr[:, 0], N_test_sub)]\n",
+    "    y_train = label_arr[np.isin(label_arr[:, 0], N_train_sub)]\n",
+    "    y_val = label_arr[np.isin(label_arr[:, 0], N_val_sub)]\n",
+    "    y_test = label_arr[np.isin(label_arr[:, 0], N_test_sub)]\n",
+    "        \n",
+    "    # baseline \n",
+    "    dummy_clf = DummyClassifier(strategy=\"most_frequent\")\n",
+    "    dummy_clf.fit(X_train,np.array(y_train[:, 2], dtype=int))\n",
+    "    dummy_proba = dummy_clf.predict_proba(X_test)\n",
+    "    fpr, tpr, _ = metrics.roc_curve(np.array(y_test[:, 2], dtype=int), dummy_proba[:,1], pos_label=1)\n",
+    "    auc = metrics.auc(fpr, tpr)\n",
+    "    \n",
+    "    metric_dict['dummy']['auc'].append(auc)\n",
+    "    metric_dict['dummy']['fprs'].append(fpr)\n",
+    "    metric_dict['dummy']['tprs'].append(tpr)\n",
+    "    metric_dict['dummy']['proba'].append(dummy_proba)\n",
+    "    metric_dict['dummy']['label'].append(y_test)\n",
+    "    \n",
+    "    # rf\n",
+    "    pred_proba, best_parameters, rf = evaluate_rf.evaluate_rf(X_train, X_val, X_test,\n",
+    "                                                          np.array(y_train[:, 2], dtype=int), \n",
+    "                                                          np.array(y_val[:, 2], dtype=int))\n",
+    "    fpr, tpr, _ = metrics.roc_curve(np.array(y_test[:, 2], dtype=int), pred_proba[:,1], pos_label=1)\n",
+    "    auc = metrics.auc(fpr, tpr)\n",
+    "    metric_dict['rf']['auc'].append(auc)\n",
+    "    metric_dict['rf']['fprs'].append(fpr)\n",
+    "    metric_dict['rf']['tprs'].append(tpr)\n",
+    "    metric_dict['rf']['proba'].append(pred_proba)\n",
+    "    metric_dict['rf']['label'].append(y_test)\n",
+    "    \n",
+    "    \n",
+    "    #print('auc: ' + str(auc))\n",
+    "    aucs.append(auc)\n",
+    "    fprs.append(fpr)\n",
+    "    tprs.append(tpr)\n",
+    "    \n",
+    "    baseline_accs.append(dummy_clf.score(X_test, np.array(y_test[:, 2], dtype=int)))\n",
+    "    rf_accs.append(rf.score(X_test, np.array(y_test[:, 2], dtype=int)))\n",
+    "    print('baseline: ' + str(baseline_accs[-1]) + ' vs. ' + str(rf_accs[-1]))"
+   ],
    "metadata": {
     "collapsed": false
    }
